<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="35dp"
        android:text="@string/select"
        android:textAppearance="?android:attr/textAppearanceMedium" />

  <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginTop="30dp"
      android:text="@string/title"
      android:textAppearance="?android:attr/textAppearanceLarge" />

  <RadioGroup
      android:id="@+id/rdbird"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true" >

      <RadioButton
          android:id="@+id/radioButton3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dove" />

      <RadioButton
          android:id="@+id/radioButton2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/peacock" />

      <RadioButton
          android:id="@+id/radioButton4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/crow" />

      <RadioButton
          android:id="@+id/radioButton1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/parrot" />
  </RadioGroup>

  <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView2"
      android:layout_below="@+id/rdbird"
      android:text="@string/ok" />

</RelativeLayout>